// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react customized options for image link 1`] = `
<a
  className="a1y806g2"
  href="https://example.com"
  target="_blank"
>
  <div
    className="aund3wh"
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="drphubp asqlr8n"
    loading="lazy"
    src="placeholder.jpg"
    srcSet={null}
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "filter": "blur(100px)",
        "transform": "scale3d(1.05,1.05,1)",
        "transition": "initial",
      }
    }
  />
</a>
`;

exports[`react customized options for normal image 1`] = `
<div
  className="a1y806g2"
>
  <div
    className="aund3wh"
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="drphubp asqlr8n"
    loading="lazy"
    src="image.jpg"
    srcSet={null}
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "filter": "initial",
        "transform": "initial",
        "transition": "initial",
      }
    }
  />
</div>
`;

exports[`react parse valid input 1`] = `
<div
  className="a1y806g2"
>
  <div
    className="aund3wh"
    style={
      Object {
        "background": "transparent",
        "color": "transparent",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="drphubp asqlr8n"
    loading="lazy"
    src="image.jpg"
    srcSet={null}
    style={
      Object {
        "background": "transparent",
        "color": "transparent",
        "filter": "initial",
        "transform": "initial",
        "transition": "initial",
      }
    }
  />
</div>
`;
